# aces-exercises

./: .editorconfig  .gitignore  pyproject.toml
project/: PROJECT.md  README.md  pyproject.toml
project/src/: core.py  main.py  template.py
project/src/solver/: __init__.py  agents.py  ids.py  messages.py  util.py
project/src/tests/: test_ids.py  test_util.py
project/tests/: test_ids.py
submissions/: ex1.typ
submissions/ex-sheet-1/: ex4.py  ex6.py  submission.typ
submissions/ex-sheet-2/: 02_exercise.ipynb  ex.py  sheet02_ex01_ex03_ex05.py  submission.typ
submissions/ex-sheet-3/: ex1.py  ex2.py  submission.typ
submissions/ex-sheet-4/: ex.py  submission.typ
submissions/ex-sheet-5/: ex3.py
submissions/ex1/: submission.typ
submissions/template/: template.typ
