[project]
name = "reconfiguration"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mango-agents>=2.1.3",
    "networkx>=3.4.2",
    "numba>=0.60.0",
    "pandapower>=2.14.11",
    "simbench>=1.5.3",
]

[[project.authors]]
name = "Michael Krah"

[[project.authors]]
name = "Tim Hesse"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

