[project]
name = "reconfiguration"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mango-agents>=2.1.3",
    "networkx>=3.4.2",
    "numba>=0.60.0",
    "pandapower>=2.14.11",
    "simbench>=1.5.3",
]

[[project.authors]]
name = "Michael Krah"

[[project.authors]]
name = "Tim Hesse"

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.7.1",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = "src"
